[gd_scene load_steps=26 format=2]

[ext_resource path="res://Scripts/Map_generator.gd" type="Script" id=1]
[ext_resource path="res://tileset.tres" type="TileSet" id=2]
[ext_resource path="res://Scripts/KinematicBody2D.gd" type="Script" id=3]
[ext_resource path="res://tiles/buero.png" type="Texture" id=4]
[ext_resource path="res://Scripts/Camera2D.gd" type="Script" id=5]
[ext_resource path="res://upgrades/Upgrades.tscn" type="PackedScene" id=6]
[ext_resource path="res://UI/hewegoagain.png" type="Texture" id=12]
[ext_resource path="res://Scripts/portal.gd" type="Script" id=13]
[ext_resource path="res://spritesheet.png" type="Texture" id=14]
[ext_resource path="res://Scripts/Room.gd" type="Script" id=15]
[ext_resource path="res://anim/walk/walk2.png" type="Texture" id=16]
[ext_resource path="res://arma.tscn" type="PackedScene" id=17]
[ext_resource path="res://anim/walk/walk1.png" type="Texture" id=18]
[ext_resource path="res://anim/walk/walk3.png" type="Texture" id=19]
[ext_resource path="res://anim/walk/walk4.png" type="Texture" id=20]
[ext_resource path="res://UI/health_bar.png" type="Texture" id=21]
[ext_resource path="res://UI/emorreu.png" type="Texture" id=22]
[ext_resource path="res://UI/fundoEscuro.png" type="Texture" id=23]
[ext_resource path="res://UI/voltar.png" type="Texture" id=24]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 183.5, 135.5 )

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 183.5, 135.5 )

[sub_resource type="RectangleShape2D" id=3]
extents = Vector2( 13.4879, 13.5601 )

[sub_resource type="SpriteFrames" id=4]
animations = [ {
"frames": [ ExtResource( 18 ) ],
"loop": true,
"name": "stop",
"speed": 1.0
}, {
"frames": [ ExtResource( 18 ), ExtResource( 16 ), ExtResource( 19 ), ExtResource( 20 ) ],
"loop": true,
"name": "Walk",
"speed": 5.0
} ]

[sub_resource type="RectangleShape2D" id=7]
extents = Vector2( 14.5, 12 )

[sub_resource type="CircleShape2D" id=6]
radius = 26.6426

[node name="Node2D" type="Node2D"]
script = ExtResource( 1 )
shape2d = SubResource( 1 )
RoomScript = ExtResource( 15 )
layers = 15

[node name="BigMap" type="TileMap" parent="."]
tile_set = ExtResource( 2 )
cell_size = Vector2( 800, 608 )
cell_quadrant_size = 6
format = 1

[node name="TileMap" type="TileMap" parent="."]
position = Vector2( 469.159, -793.897 )
scale = Vector2( 2, 2 )
z_index = -1
tile_set = ExtResource( 2 )
cell_size = Vector2( 16, 16 )
cell_quadrant_size = 26
compatibility_mode = true
format = 1
tile_data = PoolIntArray( -524259, 3, 0, 0, 5, 0, 1, 5, 0, 2, 0, 0, 3, 0, 0, 4, 0, 0, 5, 0, 0, 6, 0, 0, 7, 0, 0, 8, 0, 0, 9, 0, 0, 10, 0, 0, 11, 1, 0, 12, 1, 0, 13, 1, 0, 14, 0, 0, 15, 0, 0, 16, 0, 0, 17, 0, 0, 18, 0, 0, 19, 0, 0, 20, 0, 0, 21, 0, 0, 22, 0, 0, 23, 5, 0, 24, 5, 0, 65536, 5, 0, 65537, -1073741820, 0, 65546, 3, 0, 65547, 1, 0, 65548, 1, 0, 65549, 1, 0, 65550, 3, 0, 65559, 4, 0, 65560, 5, 0, 131072, -1073741824, 0, 131082, 3, 0, 131083, 1, 0, 131084, 1, 0, 131085, 1, 0, 131086, 3, 0, 131096, -1610612736, 0, 196608, -1073741824, 0, 196618, 3, 0, 196619, 1, 0, 196620, 1, 0, 196621, 1, 0, 196622, 3, 0, 196632, -1610612736, 0, 262144, -1073741824, 0, 262154, 3, 0, 262155, 1, 0, 262156, 1, 0, 262157, 1, 0, 262158, 3, 0, 262168, -1610612736, 0, 327680, -1073741824, 0, 327690, 3, 0, 327691, 1, 0, 327692, 1, 0, 327693, 1, 0, 327694, 3, 0, 327704, -1610612736, 0, 393216, -1073741824, 0, 393226, 3, 0, 393227, 1, 0, 393228, 1, 0, 393229, 1, 0, 393230, 3, 0, 393240, -1610612736, 0, 458752, -1073741824, 0, 458753, 3, 0, 458754, 3, 0, 458755, 3, 0, 458756, 3, 0, 458757, 3, 0, 458758, 3, 0, 458759, 3, 0, 458760, 3, 0, 458761, 3, 0, 458762, 3, 0, 458763, 1, 0, 458764, 1, 0, 458765, 1, 0, 458766, 3, 0, 458767, 3, 0, 458768, 3, 0, 458769, 3, 0, 458770, 3, 0, 458771, 3, 0, 458772, 3, 0, 458773, 3, 0, 458774, 3, 0, 458775, 3, 0, 458776, -1610612736, 0, 524288, 1, 0, 524289, 1, 0, 524290, 1, 0, 524291, 1, 0, 524292, 1, 0, 524293, 1, 0, 524294, 1, 0, 524295, 1, 0, 524296, 1, 0, 524297, 1, 0, 524298, 1, 0, 524299, 1, 0, 524300, 1, 0, 524301, 1, 0, 524302, 1, 0, 524303, 1, 0, 524304, 1, 0, 524305, 1, 0, 524306, 1, 0, 524307, 1, 0, 524308, 1, 0, 524309, 1, 0, 524310, 1, 0, 524311, 1, 0, 524312, 1, 0, 589824, 1, 0, 589825, 1, 0, 589826, 1, 0, 589827, 1, 0, 589828, 1, 0, 589829, 1, 0, 589830, 1, 0, 589831, 1, 0, 589832, 1, 0, 589833, 1, 0, 589834, 1, 0, 589835, 1, 0, 589836, 1, 0, 589837, 1, 0, 589838, 1, 0, 589839, 1, 0, 589840, 1, 0, 589841, 1, 0, 589842, 1, 0, 589843, 1, 0, 589844, 1, 0, 589845, 1, 0, 589846, 1, 0, 589847, 1, 0, 589848, 1, 0, 655360, 1, 0, 655361, 1, 0, 655362, 1, 0, 655363, 1, 0, 655364, 1, 0, 655365, 1, 0, 655366, 1, 0, 655367, 1, 0, 655368, 1, 0, 655369, 1, 0, 655370, 1, 0, 655371, 1, 0, 655372, 1, 0, 655373, 1, 0, 655374, 1, 0, 655375, 1, 0, 655376, 1, 0, 655377, 1, 0, 655378, 1, 0, 655379, 1, 0, 655380, 1, 0, 655381, 1, 0, 655382, 1, 0, 655383, 1, 0, 655384, 1, 0, 720896, -1073741824, 0, 720897, 3, 0, 720898, 3, 0, 720899, 3, 0, 720900, 3, 0, 720901, 3, 0, 720902, 3, 0, 720903, 3, 0, 720904, 3, 0, 720905, 3, 0, 720906, 3, 0, 720907, 1, 0, 720908, 1, 0, 720909, 1, 0, 720910, 3, 0, 720911, 3, 0, 720912, 3, 0, 720913, 3, 0, 720914, 3, 0, 720915, 3, 0, 720916, 3, 0, 720917, 3, 0, 720918, 3, 0, 720919, 3, 0, 720920, -1610612736, 0, 786432, -1073741824, 0, 786442, 3, 0, 786443, 1, 0, 786444, 1, 0, 786445, 1, 0, 786446, 3, 0, 786456, -1610612736, 0, 851968, -1073741824, 0, 851978, 3, 0, 851979, 1, 0, 851980, 1, 0, 851981, 1, 0, 851982, 3, 0, 851992, -1610612736, 0, 917504, -1073741824, 0, 917514, 3, 0, 917515, 1, 0, 917516, 1, 0, 917517, 1, 0, 917518, 3, 0, 917528, -1610612736, 0, 983040, -1073741824, 0, 983050, 3, 0, 983051, 1, 0, 983052, 1, 0, 983053, 1, 0, 983054, 3, 0, 983064, -1610612736, 0, 1048576, -1073741824, 0, 1048586, 3, 0, 1048587, 1, 0, 1048588, 1, 0, 1048589, 1, 0, 1048590, 3, 0, 1048600, -1610612736, 0, 1114112, -1073741824, 0, 1114113, 1610612740, 0, 1114123, 1, 0, 1114124, 1, 0, 1114125, 1, 0, 1114135, -1610612732, 0, 1114136, 5, 0, 1179648, -1073741824, 0, 1179649, 5, 0, 1179650, 1610612736, 0, 1179651, 1610612736, 0, 1179652, 1610612736, 0, 1179653, 1610612736, 0, 1179654, 1610612736, 0, 1179655, 1610612736, 0, 1179656, 1610612736, 0, 1179657, 1610612736, 0, 1179658, 1610612736, 0, 1179659, 1, 0, 1179660, 1, 0, 1179661, 1, 0, 1179662, 1610612736, 0, 1179663, 1610612736, 0, 1179664, 1610612736, 0, 1179665, 1610612736, 0, 1179666, 1610612736, 0, 1179667, 1610612736, 0, 1179668, 1610612736, 0, 1179669, 1610612736, 0, 1179670, 1610612736, 0, 1179671, 5, 0, 1179672, 5, 0 )

[node name="Area2D" type="Area2D" parent="TileMap"]
position = Vector2( 200, 152 )
collision_layer = 15
collision_mask = 15

[node name="CollisionShape2D" type="CollisionShape2D" parent="TileMap/Area2D"]
visible = false
modulate = Color( 0, 0.847059, 0.678431, 1 )
self_modulate = Color( 0.152941, 0.988235, 0.0235294, 1 )
position = Vector2( 0.0456543, 0.540009 )
shape = SubResource( 2 )

[node name="Camera2D" type="Camera2D" parent="."]
z_index = 5
current = true
process_mode = 0
script = ExtResource( 5 )

[node name="Label" type="Label" parent="Camera2D"]
margin_left = 251.28
margin_top = -278.843
margin_right = 447.28
margin_bottom = -145.843
custom_colors/font_color = Color( 0.992157, 0.980392, 0.980392, 1 )
custom_colors/font_outline_modulate = Color( 0.909804, 0.0666667, 0.282353, 1 )
custom_colors/font_color_shadow = Color( 1, 0.0705882, 0.439216, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="andar" type="Label" parent="Camera2D"]
margin_left = 227.892
margin_top = -279.898
margin_right = 277.892
margin_bottom = -265.898
__meta__ = {
"_edit_use_anchors_": false
}

[node name="lifeBar" type="TextureProgress" parent="Camera2D"]
margin_left = -371.889
margin_top = -297.496
margin_right = -307.889
margin_bottom = -280.496
rect_scale = Vector2( 3.08861, 1.30592 )
max_value = 15.0
value = 15.0
texture_progress = ExtResource( 21 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="life" type="Label" parent="Camera2D"]
margin_left = -394.173
margin_top = -294.414
margin_right = -354.173
margin_bottom = -280.414
text = "0
"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="fundoEscuro" type="Sprite" parent="Camera2D"]
visible = false
texture = ExtResource( 23 )

[node name="emorreu" type="Sprite" parent="Camera2D"]
visible = false
position = Vector2( -12.7853, -94.7786 )
texture = ExtResource( 22 )

[node name="TextureButton" type="TextureButton" parent="Camera2D"]
visible = false
margin_left = -88.0
margin_top = 79.0
margin_right = -24.0
margin_bottom = 103.0
rect_scale = Vector2( 2.7277, 3.18331 )
disabled = true
texture_normal = ExtResource( 12 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="voltar" type="TextureButton" parent="Camera2D"]
visible = false
margin_left = -87.0
margin_top = 161.0
margin_right = -23.0
margin_bottom = 177.0
rect_scale = Vector2( 2.70832, 2.37728 )
disabled = true
texture_normal = ExtResource( 24 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Player" type="KinematicBody2D" parent="." groups=[
"Player",
]]
z_index = 1
collision_layer = 3075
collision_mask = 15
script = ExtResource( 3 )
cam = NodePath("../Camera2D")

[node name="CollisionShape2D" type="CollisionShape2D" parent="Player"]
shape = SubResource( 3 )

[node name="Sprite" type="AnimatedSprite" parent="Player"]
position = Vector2( 0, -5 )
scale = Vector2( 2, 2 )
frames = SubResource( 4 )
animation = "stop"
playing = true

[node name="ponta" type="Sprite" parent="Player"]
visible = false
position = Vector2( 2.94961, 0 )
scale = Vector2( 0.508399, 0.305512 )
texture = ExtResource( 14 )
offset = Vector2( 30, 0 )

[node name="arma" parent="Player" instance=ExtResource( 17 )]

[node name="Area_de_dano" type="Area2D" parent="Player"]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Player/Area_de_dano"]
visible = false
position = Vector2( -0.5, 0 )
shape = SubResource( 7 )

[node name="Upgrades" parent="Player" instance=ExtResource( 6 )]
position = Vector2( 0, -5 )

[node name="portal" type="Area2D" parent="."]
position = Vector2( -615.132, -97.9334 )
collision_layer = 2147483663
collision_mask = 15
script = ExtResource( 13 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="portal"]
z_as_relative = false
shape = SubResource( 6 )

[node name="Sprite" type="Sprite" parent="portal"]
scale = Vector2( 2, 2 )
texture = ExtResource( 4 )
[connection signal="desci" from="." to="Camera2D" method="_on_Node2D_desci"]
[connection signal="map" from="." to="portal" method="_on_Node2D_map"]
[connection signal="map" from="." to="Camera2D" method="_on_Node2D_map"]
[connection signal="saida" from="." to="portal" method="_on_Node2D_saida"]
[connection signal="spawn" from="." to="Player" method="_on_Node2D_spawn"]
[connection signal="button_down" from="Camera2D/TextureButton" to="." method="_on_TextureButton_button_down"]
[connection signal="button_down" from="Camera2D/voltar" to="." method="_on_voltar_button_down"]
[connection signal="action" from="Player" to="Player" method="_on_Player_action"]
[connection signal="action" from="Player" to="Player/arma" method="_on_Player_action"]
[connection signal="apareci" from="Player" to="Camera2D" method="_on_KinematicBody2D_apareci"]
[connection signal="baixo" from="Player" to="Camera2D" method="_on_KinematicBody2D_baixo"]
[connection signal="cima" from="Player" to="Camera2D" method="_on_KinematicBody2D_cima"]
[connection signal="direita" from="Player" to="Camera2D" method="_on_KinematicBody2D_direita"]
[connection signal="esquerda" from="Player" to="Camera2D" method="_on_KinematicBody2D_esquerda"]
[connection signal="area_entered" from="Player/Area_de_dano" to="Player" method="_on_Area_de_dano_area_entered"]
[connection signal="body_entered" from="portal" to="portal" method="_on_portal_body_entered"]
[connection signal="desceu" from="portal" to="." method="_on_portal_desceu"]
[connection signal="pos" from="portal" to="Player" method="_on_portal_pos"]
